--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav id="menu">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="index.html" class="brand-logo"><img src="img/LOGO.svg"></a>
+                        <a href="#!" class="brand-logo"><img src="img/Semttulo.svg"></a>
                       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                         
                         <a href="#"><img src="img/avatar-365-456317.png" id="modal-avatar"></a>
@@ -83,7 +83,7 @@
         <section id="conteudoTexto">
             <div>
                 <h1>Sobre Nós</h1>
-                <p>A SolidariUni é uma associação que foi fundada em meados de 2018, por um grupo de amigos. Buscamos fazer a união entre colaboradores e recebedores de doações. Nosso principal objetivo é unir institutos que precisam de itens específicos e encontrar pessoas ou empresas que possam cooperar de alguma maneira de maneira efetiva e sem fins lucrativos.</p>
+                <p>A SolidariUni é uma associação fundada em meados de 2018, por um grupo de amigos. Buscamos fazer a união entre colaboradores e recebedores de doações. Nosso principal objetivo é unir institutos que precisam de itens específicos e encontrar pessoas ou empresas que possam cooperar de alguma maneira de maneira efetiva e sem fins lucrativos. Participe você também!</p>
         
             </div>
         </section>
