--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
                       <li><i class="icon-facebook-squared"></i><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
                       <li><i class="icon-instagram"></i><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
                       <li><i class="icon-mail"></i><a class="grey-text text-lighten-3" href="#!">Email</a></li>
+                      <li><a class="grey-text text-lighten-3" href="termos.html">Termos de uso</a></li>
+                      <li><a class="grey-text text-lighten-3" href="contato-frontend.html">Fale conosco</a></li>
                     </ul>
                   </div>
                   <div class="col l4 offset-l2 s12">
